--- a/backend/package.json
+++ b/backend/package.json
@@ -1,39 +1,65 @@
 {
-  "name": "api",
+  "name": "backend",
   "version": "1.0.0",
   "main": "src/server.ts",
   "scripts": {
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "build": "npx tsc",
+    "clean": "rimraf dist",
     "typeorm": "npm run build && npx typeorm",
     "migration:create": "typeorm migration:create",
     "migration:generate": "npm run typeorm -- -d dist/db/data-source.js migration:generate",
     "migration:run": "npm run typeorm -- -d dist/db/data-source.js migration:run",
     "migration:revert": "npm run typeorm -- -d dist/db/data-source.js migration:revert",
-    "start": "node dist/server.js",
-    "start:dev": "nodemon --exec ts-node src/server.ts"
+    "start": "NODE_ENV=production node dist/server.js",
+    "start:dev": "nodemon --exec ts-node src/server.ts",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.1",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.5",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "eslint": "^8.57.0",
+    "@typescript-eslint/parser": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "jest": "^29.7.0",
+    "jest-html-reporter": "^4.0.1",
     "nodemon": "^3.1.9",
+    "rimraf": "^5.0.5",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   }
 }
