--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,17 @@
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "axios": "^1.8.4",
+    "file-saver": "^2.0.5",
     "jose": "^6.0.10",
     "jwt-decode": "^4.0.0",
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/file-saver": "^2.0.7",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^20",
     "@types/react": "^19",
